Write perf results to file